[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/main_menu/main_menu_background.png" type="Texture" id=1]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )
settings_menu = "res://menus/settings/settings_menu.tscn"
world = "res://scenes/levels/world.tscn"

[node name="Visuals" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Visuals"]
texture = ExtResource( 1 )
centered = false

[node name="UI" type="Control" parent="."]
focus_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="UI"]
anchor_bottom = 0.312
margin_left = 280.0
margin_top = 256.0
margin_right = 362.0
margin_bottom = 276.0
toggle_mode = true
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="UI"]
margin_left = 288.0
margin_top = 280.0
margin_right = 351.0
margin_bottom = 300.0
toggle_mode = true
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="UI"]
margin_left = 288.0
margin_top = 304.0
margin_right = 351.0
margin_bottom = 324.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="UI/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="UI/QuitButton" to="." method="_on_QuitButton_pressed"]
